# HelloWorldbyPolkadot

./: README.md  deploy_on_moonbase_alpha_using_truffle  using_remix_and_metamask_on_moonbeam
back_end_javascript/: README.md  index.js  package-lock.json  package.json
frame_development/: README.md
frame_development/front-end/src/: App.js  ArticleStruct.js
frame_development/front-end/src/config/: development.json
frame_multisig/: README.md
frame_multisig/node/runtime/src/: lib.rs
frame_multisig/script/: README.md  index.js  package-lock.json  package.json
front_end_javascript/: .gitignore  README.md  package.json
front_end_javascript/src/: App.js  BlockInfoBySearch.js  BlockInfoCurrent.js
front_end_javascript/src/config/: common.json
ink_smart_contract/node/node/src/: chain_spec.rs
ink_smart_contract/node/runtime/src/: lib.rs
ink_smart_contracts/: README.md
ink_smart_contracts/ech/: Cargo.toml  README.md  lib.rs
ink_smart_contracts/front-end/src/: App.js  Balances.js  EchContract.js  EchMetadata.json  Transfer.js
local_phala_network/: README.md
multi_currency_support/: README.md
multi_currency_support/node/: types.json
multi_currency_support/node/node/src/: chain_spec.rs
multi_currency_support/node/runtime/: Cargo.toml
multi_currency_support/node/runtime/src/: lib.rs
nft_support/: README.md
nft_support/node/: types.json
nft_support/node/pallets/nft/: Cargo.toml
nft_support/node/pallets/nft/src/: lib.rs
nft_support/node/runtime/: Cargo.toml
solidity_contract_on_plasm_network/: README.md  flipper.json
(+2 files in other folders)
