[package]
authors = ['Echolon166']
description = 'NFT pallet to support NFTs using orml-nft'
edition = '2018'
homepage = 'https://github.com/Echolon166'
license = 'Unlicense'
name = 'pallet-nft'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
orml-nft = { default-features = false, version = '0.2.1-dev' }
sp-runtime = { default-features = false, version = '2.0.0' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'orml-nft/std',
    'sp-runtime/std',
]
